hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_cond_result.php.like_types.exp
File "lambda_bad_as_cond_result.php", line 30, characters 17-30:
No method 'missing_method' in MyClass (did you mean 'hello'?) (Typing[4053])
File "lambda_bad_as_cond_result.php", line 26, characters 46-52:
This is why I think it is an object of type MyClass
File "lambda_bad_as_cond_result.php", line 4, characters 7-13:
Declaration of MyClass is here
File "lambda_bad_as_cond_result.php", line 36, characters 17-39:
No method 'another_missing_methodO' in MyClass (did you mean 'hello'?) (Typing[4053])
File "lambda_bad_as_cond_result.php", line 26, characters 46-52:
This is why I think it is an object of type MyClass
File "lambda_bad_as_cond_result.php", line 4, characters 7-13:
Declaration of MyClass is here
File "lambda_bad_as_cond_result.php", line 11, characters 61-68:
Invalid assignment (Typing[4110])
File "lambda_bad_as_cond_result.php", line 11, characters 39-59:
Expected (function(T): string)
File "lambda_bad_as_cond_result.php", line 11, characters 39-59:
But got dynamic because it is an unenforceable type
File "lambda_bad_as_cond_result.php", line 18, characters 67-74:
Invalid assignment (Typing[4110])
File "lambda_bad_as_cond_result.php", line 18, characters 39-65:
Expected (function(MyClass): string)
File "lambda_bad_as_cond_result.php", line 18, characters 39-65:
But got dynamic because it is an unenforceable type
